js file started

--- a/index.html
+++ b/index.html
@@ -1,15 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CODE QUIZ</title>
+    <title>CodeQuiz</title>
+    <link rel="shortcut icon" href="assets/matrix.png"
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
-    
 
-<script src="script.js"></script>
+<body>
+    <header>Coding Quiz</header>
+
+    <section class="container">
+        <div id="questions" class="hide"></div>
+        <h1>Question</h1>
+        <div id="option" class="btn-grid">
+            <button class="selections"> A</button>
+            <button class="selections"> B</button>
+            <button class="selections"> C</button>
+            <button class="selections"> D</button>
+        </div>
+
+        <div id="buttons">
+            <button id="start" class="begin">Click to Start!</button>
+            <button id="advance" class="advance-btn hide">Next</button>
+        </div>
+
+        </div>
+
+    </section>
+
+
+
+
+
+    <script src="script.js"></script>
 </body>
+
 </html>
