flipping back and forth from java to css

--- a/index.html
+++ b/index.html
@@ -23,30 +23,32 @@
         </section>
 
 
-        <section id="option" class="btn-grid">
+        <section id="options">
             <div id="time"> Time: </div>
 
             <div id="questoinHere">
                 <p>""</p>
             </div>
-            <button class="selections"> A</button>
-            <button class="selections"> B</button>
-            <button class="selections"> C</button>
-            <button class="selections"> D</button>
+            <ul>
+                <li><button id="a" onclick="checkAnswer('a')"> A</button></li>
+                <li><button id="b" onclick="checkAnswer('b')"> B</button></li>
+                <li><button id="c" onclick="checkAnswer('c')"> C</button></li>
+                <li><button id="d" onclick="checkAnswer('d')"> D</button></li>
+            </ul>
             <div id="score"></div>
         </section>
 
         <section>
             <div id="final"></div>
-            <textarea type="text" id="scoreEntry">Enter name here!</textarea>
-            <button id="userData">Submit!</button>
+            <textarea type="text" id="scoreEntry" id="initials">Enter name here!</textarea>
+            <button id="enter">Submit!</button>
             <div id="results">
                 <div id="scoreBoard">
                     <h1>Username</h1>
                     <h1>Score</h1>
                 </div>
-            <div id="leaderBoard"></div>
-            <div id="leaderScore"></div>
+                <div id="leaderBoard"></div>
+                <div id="leaderScore"></div>
             </div>
         </section>
 
