--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
 
 
         <section id="options">
-            <div id="time"> Time: </div>
+            <div id="timer"> Time: </div>
 
-            <div id="questoinHere">
-                <p>""</p>
+            <div id="questionHere">
+                <p></p>
             </div>
             <ul>
                 <li><button id="a" onclick="checkAnswer('a')"> A</button></li>
@@ -37,6 +37,8 @@
             </ul>
             <div id="score"></div>
         </section>
+
+        <div id="end"></div>
 
         <section>
             <div id="final"></div>
