--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <input type="text" size="40" placeholder="User Initials" name="intials" id="initials" />
             <button id="enter">Submit!</button>
         </div>
-
+<hello></hello>
 
         <div id="results">
             <div id="scoreBoard">
